# master-thesis-asds

./: BigQueryInstructions.md  ExampleQuery.md  README.md  main.py  pyproject.toml  skills-lock.json
.codex/environments/: environment.toml
src/: loader.py
src/__marimo__/session/: loader.py.json
