[project]
name = "disertatie-asds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "db-dtypes>=1.4.4",
    "duckdb>=1.5.2",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-storage>=3.10.1",
    "marimo>=0.23.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "polars>=1.40.0",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "sqlglot>=30.4.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]


[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
